panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__initialisation__struct__test_braced_init_of_struct.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/initialisation/struct/test_braced_init_of_struct.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/initialisation/struct/test_braced_init_of_struct.c"
   (declaration memcmp~0 `fn(∅: ptr<void const>, ∅: ptr<void const>, ∅: typeof((sizeof 0))) -> int` ∅)
   (struct T~1
      (member x `int`)
      (member cs `array<char; 4>`)
      (member y `int`)
      (member z `int`))
   (function-definition
      main~2 `fn() -> int`
      (compound-statement
         (struct T~1
            (member x `int`)
            (member cs `array<char; 4>`)
            (member y `int`)
            (member z `int`))
         (declaration t~4 `struct T~1 complete`
            (braced
               0x1234'5678
               1
               2
               3
               4
               0xabcd'ef42))
         (declaration bytes~5 `array<char; (sizeof (name t~4 `struct T~1 complete`))>`
            (braced
               0x78
               0x56
               0x34
               0x12
               1
               2
               3
               4
               0x42
               0xef
               0xcd
               0xab
               0
               0
               0
               0))
         (return
            (call (name memcmp~0 `fn(∅: ptr<void const>, ∅: ptr<void const>, ∅: typeof((sizeof 0))) -> int`)
               (addressof (name t~4 `struct T~1 complete`))
               (name bytes~5 `array<char; (sizeof (name t~4 `struct T~1 complete`))>`)
               (sizeof (name t~4 `struct T~1 complete`)))))))

----- stderr -----
